minor refactoring on accessing JS methods through HTML elements

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body>
 	<h1>Your Todo List! </h1>
-	<button id="displayTodosButton">Display Todos</button>
-	<button id="displayToggleAllButton">Toggle All</button>
+	<button onclick="handlers.displayTodos()">Display Todos</button>
+	<button onclick="handlers.toggleAll()">Toggle All</button>
 	
 	<script src="todos.js"></script>
 </body>
