v9, todos displayed to HTML(rather than console.log) and each button now runs the new displayTodos function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <body>
 	<h1>Your Todo List! </h1>
 	<div>
-		<button onclick="handlers.displayTodos()">Display Todos</button>
 		<button onclick="handlers.toggleAll()">Toggle All</button>
 	</div>
 	<div>
@@ -27,6 +26,13 @@
 	<div>
 		<button onclick="handlers.toggleToDo()">Toggle Todo</button>
 		<input id="toggleTodoPositionInput" type="number" name="">
+	</div>
+
+	<div>
+		<ul>
+
+
+		</ul>
 	</div>
 	
 	<script src="todos.js"></script>
