--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Get it done!</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -18,10 +19,6 @@
 		<button onclick="handlers.changeToDo()">Change Todo</button>
 		<input id="changeTodoPositionInput" type="number" name="">
 		<input id="changeTodoTextInput" type="text" name="">
-	</div>
-	<div>
-		<button onclick="handlers.deleteToDo()">Delete</button>
-		<input id="deleteTodoPositionInput" type="number" name="">
 	</div>
 	<div>
 		<button onclick="handlers.toggleToDo()">Toggle Todo</button>
